<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.opet.exercapplivros.DashboardActivity">

    <TextView
        android:id="@+id/textLista"
        android:text="@string/sem_lista_cadastrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="novaLista"
        android:text="@string/btnNovaLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="logout"
        android:text="@string/btnSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
